# ribbex

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: release-drafter.yml
.github/workflows/: publish.yml  tests.yml
docs/: requirements.txt
docs/source/: apidoc.rst  conf.py  user.rst
docs/source/_examples/: category.py  panel.py  ribbonbar-customize.py  ribbonbar.py  tutorial-ribbonbar.py
examples/: word.py
open_pyqt_ribbon/: category.py  screenshotwindow.py
pyqt_ribbon/: constants.py  gallery.py  logger.py  separator.py  titlewidget.py
pyqtribbon/: constants.py  menu.py  panel.py  panel.pyi  ribbonbar.py  tabbar.py  toolbutton.py
ribbex/: titlewidget.py
tests/: test_categories.py  test_category.py  test_filemenu.py  test_gallery.py  test_main.py  test_panel.py  test_ribbonbar.py  test_titlewidget.py  test_use_dictionary_to_create_widgets.py
