# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqtribbon"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Ribbon Bar for PyQt6 applications"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = ["PyQt6"]

[project.urls]
"GitHub" = "https://github.com/haiiliin/pyqtribbon"
"Documentation" = "https://pyqribbon.readthedocs.io/en/stable/"

[dependency-groups]
dev = [
    "coveralls",
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "tox",
]
docs = [
    "PyQt6",
    "sphinx",
    "sphinxcontrib-apidoc",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-hoverxref",
    "sphinx-rtd-theme",
    "sphinx-toolbox",
    "sphinx-qt-documentation",
]

[tool.setuptools]
packages = ['pyqt_ribbon']

[tool.setuptools.package-data]
pyqt_ribbon = ["icons/*", "styles/*"]

[tool.setuptools_scm]
write_to = "pyqt_ribbon/_version.py"

[tool.pytest.ini_options]
testpaths = ["pyqt_ribbon", "tests"]
addopts = "-rf -s --cov=pyqt_ribbon --cov-report=xml --cov-report=html --cov-report=term-missing --doctest-modules"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '(pyqt_ribbon/.*\.py|tests/.*\.py|docs/source/conf\.py)'

[tool.isort]
profile = "black"

[tool.pdm]
ignore_package_warnings = ["*"]
