# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ribbex"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
    { name="Roman PARYGIN", email="roman.parygin@gmail.com" },
]
description = "Ribbon Bar for PyQt6 applications"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.13"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = ["PyQt6"]

[project.urls]
"GitHub" = "https://github.com/rompik/ribbex"
"Repository" = "https://github.com/rompik/ribbex"
"Issues" = "https://github.com/rompik/ribbex/issues"
"Documentation" = "https://pyqribbon.readthedocs.io/en/stable/"

[dependency-groups]
dev = [
    "coveralls",
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "tox",
]
docs = [
    "PyQt6",
    "sphinx",
    "sphinxcontrib-apidoc",
    "sphinx-codeautolink",
    "sphinx-copybutton",
    "sphinx-hoverxref",
    "sphinx-rtd-theme",
    "sphinx-toolbox",
    "sphinx-qt-documentation",
]

[tool.setuptools]
packages = ['ribbex', 'ribbex.icons', 'ribbex.styles']

[tool.setuptools.package-data]
ribbex = ["icons/*", "styles/*"]

[tool.setuptools_scm]
write_to = "ribbex/_version.py"

[tool.pytest.ini_options]
testpaths = ["ribbex", "tests"]
addopts = "-rf -s --cov=ribbex --cov-report=xml --cov-report=html --cov-report=term-missing --doctest-modules"

[tool.black]
line-length = 120
target-version = ['py313']
include = '(ribbex/.*\.py|tests/.*\.py|docs/source/conf\.py)'

[tool.isort]
profile = "black"
